--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "photo-gallery-ng-capacitor",
   "version": "2.0.0",
-  "author": "Ionic Framework",
+  "author": "Ionic Framework Manar",
   "homepage": "https://ionicframework.com/docs/angular/your-first-app",
   "scripts": {
     "ng": "ng",
